--- a/app/src/main/res/layout/fragment_world_news.xml
+++ b/app/src/main/res/layout/fragment_world_news.xml
@@ -13,22 +13,22 @@
         android:visibility="gone">
 
         <LinearLayout
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView"
-                app:tint="#FF4E4E"
                 android:layout_width="@dimen/dim_100dp"
                 android:layout_height="@dimen/dim_100dp"
                 android:layout_margin="10dp"
-                android:src="@drawable/ic_baseline_error_outline_24" />
+                android:src="@drawable/ic_baseline_error_outline_24"
+                app:tint="#FF4E4E" />
 
             <TextView
                 android:id="@+id/textView"
@@ -51,12 +51,12 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
