fix: Thumbnail and Favicon not Working
1. Thumbnail and Favicon not Working
2. News list Pagination

--- a/app/src/main/res/layout/fragment_local_news.xml
+++ b/app/src/main/res/layout/fragment_local_news.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.main.top.TopNewsFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/newslist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_error"
         android:layout_width="match_parent"
@@ -46,7 +51,7 @@
         android:id="@+id/layout_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#CCCCCC"
+        android:background="@color/transparent"
         android:visibility="gone">
 
         <ProgressBar
@@ -59,8 +64,4 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/newslist"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </FrameLayout>
