--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -36,9 +36,8 @@
                     android:layout_width="@dimen/dim_20dp"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/favicon"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/ic_baseline_newspaper_24"
-                    app:tint="@color/purple_500" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_baseline_newspaper_24" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -91,9 +90,11 @@
             android:id="@+id/news_thumbnail"
             android:layout_width="@dimen/dim_150dp"
             android:layout_height="@dimen/dim_100dp"
+            android:layout_gravity="center"
             android:contentDescription="@string/thumbnail"
             android:scaleType="centerCrop"
-            app:srcCompat="@android:mipmap/sym_def_app_icon"
+            app:srcCompat="@drawable/ic_baseline_image_24"
             tools:ignore="ImageContrastCheck" />
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
